--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,13 +17,42 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>
+              <% if @book.favorited_by?(current_user) %>
+            <p>
+              <%= link_to book_favorites_path(@book.id), method: :delete do %>
+             ♥<%= @book.favorites.count %>
+              <% end %>
+            </p>
+              <% else %>
+            <p>
+              <%= link_to book_favorites_path(@book.id), method: :post do %>
+             ♡<%= @book.favorites.count %>
+              <% end %>
+            </p>
+              <% end %>
+          </td>
             <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <% end %>
             <% if @book.user == current_user %>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
+            <td>コメント件数：<%= @book.book_comments.count %></td>
         </tr>
+        <div>
+            <% @book.book_comments.each do |book_comment| %>
+          <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
+            <%= book_comment.user.name %>
+            <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+            <% end %>
+        </div>
+        <div>
+          <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.submit "送信" %>
+          <% end %>
+        </div>
       </table>
     </div>
   </div>
