--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,22 +38,35 @@
             <% if @book.user == current_user %>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
-            <td>コメント件数：<%= @book.book_comments.count %></td>
+            <td>コメント数：<%= @book.book_comments.count %></td>
         </tr>
-        <div>
-            <% @book.book_comments.each do |book_comment| %>
-          <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
-            <%= book_comment.user.name %>
-            <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+      </table>
+      <table>
+         <% @book.book_comments.each do |book_comment| %>
+        <tr>
+          <td>
+
+             <%= link_to(@user) do %>
+             <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
+             <%= book_comment.user.name %>
+             <% end %>
+          </td>
+          <td>
+             <%= book_comment.comment %>
+
+          </td>
+            <% if book_comment.user == current_user %>
+            <td><%= link_to 'Destroy', book_book_comment_path(book_comment.id), method: :delete, class: "btn btn-sm btn-danger"%></td>
             <% end %>
-        </div>
+        </tr>
+        <% end %>
+      </table>
         <div>
           <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.text_area :comment, size: "80x5", placeholder: "コメントをここに" %><br>
           <%= f.submit "送信" %>
           <% end %>
         </div>
-      </table>
     </div>
   </div>
 </div>
