--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -53,13 +53,14 @@
           </td>
           <td>
              <%= book_comment.comment %>
-
           </td>
-            <% if book_comment.user == current_user %>
-            <td><%= link_to 'Destroy', book_book_comment_path(book_comment.id), method: :delete, class: "btn btn-sm btn-danger"%></td>
-            <% end %>
+             <% if book_comment.user == current_user %>
+        　<td>
+             <%= link_to 'Destroy', book_book_comment_path(book_comment.id), method: :delete, class: "btn btn-sm btn-danger"%>
+          </td>
+             <% end %>
         </tr>
-        <% end %>
+             <% end %>
       </table>
         <div>
           <%= form_with model: [@book, @book_comment] do |f| %>
