--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,2 +1,51 @@
-<h1>Searches#search</h1>
-<p>Find me in app/views/searches/search.html.erb</p>
+  <% if @range == "User" %>
+      <h2>Users search for "<%= @word %>"</h2>
+        <table class='table'>
+          <thead>
+            <tr>
+              <th>image</th>
+              <th>name</th>
+             <th colspan="4"></th>
+            </tr>
+          </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
+              <td><%= user.name %></td>
+              <td>フォロー数: <%= user.followings.count %></td>
+              <td>フォロワー数: <%= user.followers.count %></td>
+              <td><% if current_user.following?(user) %>
+                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+                  <% end %>
+              </td>
+              <td><%= link_to 'Show', user %></td>
+            </tr>
+          <% end %>
+        </tbody>
+  <% else %>
+  <h2>Books search for "<%= @word %>"</h2>
+  <table class='table table-hover table-inverse'>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= image_tag book.user.get_profile_image, size:'50x50' %></td>
+          <td><%= link_to book.title,book_path(book.id) %></td>
+          <td><%= book.body %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  <% end %>
+</table>
+
+
