--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,33 +27,14 @@
             <td>コメント数：<%= @book.book_comments.count %></td>
         </tr>
       </table>
-      <table>
-         <% @book.book_comments.each do |book_comment| %>
-        <tr>
-          <td>
-
-             <%= link_to(@user) do %>
-             <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
-             <%= book_comment.user.name %>
-             <% end %>
-          </td>
-          <td>
-             <%= book_comment.comment %>
-          </td>
-             <% if book_comment.user == current_user %>
-        　<td>
-             <%= link_to 'Destroy', book_book_comment_path(book_comment.id), method: :delete, class: "btn btn-sm btn-danger"%>
-          </td>
-             <% end %>
-        </tr>
-             <% end %>
-      </table>
-        <div>
-          <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment, size: "80x5", placeholder: "コメントをここに" %><br>
-          <%= f.submit "送信" %>
-          <% end %>
+        <div id = "comments_area">
+          <%= render 'book_comments/book_comments', book: @book %>
         </div>
-    </div>
+         <div>
+    <%= form_with model: [@book, @book_comment],local: false do |f| %>
+    <%= f.text_area :comment, size: "80x5", placeholder: "コメントをここに" %><br>
+    <%= f.submit "送信" %>
+    <% end %>
+  </div>
   </div>
 </div>
