--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,6 +7,20 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  <div class="form-group" id="post_raty">
+    <%= f.label :score,"Rate" %>
+    <%= f.hidden_field :score, id: :review_star, class:'form-control' %>
+  </div>
+  <script>
+    let elem = document.querySelector('#post_raty');
+    let opt = {
+      starOff: "<%= asset_path('star-off.png') %>",
+      starOn: "<%= asset_path('star-on.png') %>",
+      starHalf: "<%= asset_path('star-half.png') %>",
+      scoreName: 'book[score]',
+    };
+    raty(elem,opt);
+  </script>
   <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
