--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,11 +20,14 @@
           <td id="favorite_buttons_<%= @book.id %>">
             <%= render "favorites/favorites", book: @book %>
           </td>
+            <td>コメント数：<%= @book.book_comments.count %></td>
+            <td>
+              <%= render "books/rate", book: @book %>
+            </td>
             <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
-            <td>コメント数：<%= @book.book_comments.count %></td>
         </tr>
       </table>
         <div id = "comments_area">
