--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
   <% if book.id === nil %>
-  <div class="form-group" id="star",>
+  <div class="form-group" id="star">
     <%= f.label :rate %>
     <%= f.hidden_field :score, id: :review_star, class:'form-control' %>
   </div>
