--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,3 @@
+$("#book_comments_counter").html("<%= j(render "counter", book: @book) %>");
 $("#comments_area").html("<%= j(render "book_comments", book: @book) %>");
 $("textarea").val('');
