--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,7 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th colspan="6"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +16,7 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><%= link_to book.tag,search_book_path(book.tag) %></td>
         <td id = "favorite_buttons_<%= book.id %>">
           <%= render "favorites/favorites", book: book %>
         </td>
