--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,7 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td><%= link_to @book.tag, search_book_path(@book.tag) %></td>
           <td id="favorite_buttons_<%= @book.id %>">
             <%= render "favorites/favorites", book: @book %>
           </td>
