--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,16 +60,25 @@
         <div class="row">
           <div class="mx-auto">
             <div class="search_form">
-              <%= form_with url: search_path, local: true, method: :get do |f| %>
-              <%= f.text_field :word %>
-              <%= f.select :range, options_for_select([['User'], ['Book']]) %>
-              <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-              <%= f.submit "検索" %>
-              <% end %>
-              <%= form_with url: search_book_path, local: true, method: :get do |f| %>
-              <%= f.text_field :search_word %>
-              <%= f.submit "タグ検索" %>
-              <% end %>
+              <table>
+                <tr>
+                  <td>
+                    <%= form_with url: search_path, local: true, method: :get do |f| %>
+                    <%= f.text_field :word %>
+                    <%= f.select :range, options_for_select([['User'], ['Book']]) %>
+                    <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+                    <%= f.submit "検索" %>
+                    <% end %>
+                  </td>
+                  <td>　</td>
+                  <td>
+                    <%= form_with url: search_book_path, local: true, method: :get do |f| %>
+                    <%= f.text_field :search_word %>
+                    <%= f.submit "タグ検索" %>
+                    <% end %>
+                  </td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
