--- a/app/views/books/_rate.html.erb
+++ b/app/views/books/_rate.html.erb
@@ -1,6 +1,6 @@
 <div id="rate_<%= book.id %>"></div>
   <script>
-  $(document).on('turbolinks:load', function() {
+  $(document).ready(function(){
     let raty_<%= book.id %> = document.querySelector('#rate_<%= book.id %>');
     rate_<%= book.id %>.innerHTML = ""
     let option_<%= book.id %> = {
