--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-md-3'>
+    <div class='col-md-3', style="position: static;">
       <h2>User info</h2>
       <%= render 'users/info' %>
       <h2 class="mt-3">New book</h2>
@@ -26,6 +26,9 @@
           </td>
             <td>
               <%= render "rate", book: @book %>
+            </td>
+            <td>
+              <p>閲覧数: <%= @book.view_counts.count %></p>
             </td>
             <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
