--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,12 +1,12 @@
   <hr>
-<h1><%= @entriy2.user.name%>さんとのチャット</h1>
+<h1><%= @another_entriy.user.name%>さんとのチャット</h1>
   <hr>
 <% if @messages.present? %>
   <% @messages.each do |m| %>
   <p style="margin-left: 400px;"><%= m.content %></p>
   <% end %>
 <% else %>
-  <h3 class="text-center">メッセージはまだありません</h3>
+  <h3 style="margin-left: 400px;">メッセージはまだありません</h3>
 <% end %>
 <%= form_with model: @message do |f| %>
   <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size =>25 %>
