--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -25,23 +25,24 @@
     <% end %>
   <% else %>
     <% if current_user.following?(@user) %>
-      <%= link_to "フォロー外す", user_relationships_path(@user), method: :delete, class: 'btn btn-success' %>
+      <%= link_to "フォロー外す", user_relationships_path(@user), method: :delete, class: 'btn btn-outline-danger' %>
     <% else %>
-      <%= link_to "フォローする", user_relationships_path(@user), method: :post, class: 'btn btn-success' %>
+      <%= link_to "フォローする", user_relationships_path(@user), method: :post, class: 'btn btn-outline-success' %>
     <% end %>
   <% end %>
+
   <% unless @user.id == current_user.id %>
     <% if (current_user.following? @user) && (@user.following? current_user)  %>
       <% if @is_room == true %>
         <span>　　</span>
-       <%= link_to "chatへ",room_path(@room_id), class: "btn btn-primary" %>
+       <%= link_to "chatへ",room_path(@room_id), class: "btn btn-outline-primary" %>
       <% else %>
         <%= form_with model: @room do |f| %>
           <%= fields_for @entry do |e| %>
             <%= e.hidden_field :user_id, value: @user.id %>
           <% end %>
             <span>　　</span>
-          <%= f.submit "chatを始める", class: "btn btn-primary" %>
+          <%= f.submit "chatを始める", class: "btn btn-outline-primary" %>
         <% end %>
       <% end %>
     <% end %>
