--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,9 +1,12 @@
+<div><%=link_to "グループを作成する",new_group_path %> | 
+  <%=link_to "グループ一覧",groups_path %>
+</div>
 <table class='table'>
   <thead>
     <tr>
       <th>image</th>
       <th>name</th>
-      <th colspan="4"></th>
+      <th colspan="6"></th>
     </tr>
   </thead>
   <tbody>
