--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -9,13 +9,31 @@
     <div class='col-md-8 offset-md-1'>
      <h2>Group Detail</h2>
       <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>グループ名</th>
+            <th>紹介文</th>
+            <th>メンバー</th>
+            <th colspan="6"></th>
+          </tr>
+        </thead>
         <tr>
-          <td><%= image_tag @group.get_group_image, size:"50x50" %></td>
+          <td><%= image_tag @group.group_image, size:"50x50" %></td>
           <td><%= @group.name %></td>
           <td><%= @group.introduction %></td>
           <td>
+            <% @group.users.each do |member| %>
+            <%= member.name %><br>
+            <% end %>
+          </td>
+          <td>
             <% if @group.owener_id == current_user.id %>
               <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-outline-success" %>
+            <% elsif @group.users.include?(current_user) %>
+              <%= link_to "Leave this group", group_path(@group), method: :delete, class: "btn btn-outline-danger" %>
+            <% else %>
+              <%= link_to "Join this group", group_join_path(@group), class: "btn btn-outline-success"%>
             <% end %>
           </td>
         </tr>
