--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div class="form-group">
     <%= f.label :グループ画像 %><br>
-    <%= f.file_field :image, class:"form_control-file", accept: "image/*" %>
+    <%= f.file_field :image_id, class:"form_control-file", accept: "image/*" %>
   </div>
 
   <div class="form-group">
