--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -14,15 +14,17 @@
             <th></th>
             <th>グループ名</th>
             <th>紹介文</th>
+            <th>メンバー数</th>
             <th colspan="6"></th>
           </tr>
         </thead>
         <tbody>
           <% @groups.each do |group| %>
             <tr>
-            <td><%= image_tag group.get_group_image, size:"50x50" %></td>
+            <td><%= image_tag group.group_image, size:"50x50" %></td>
               <td><%= link_to group.name, group_path(group) %></td>
               <td><%= group.introduction %></td>
+              <td><%= group.users.count %></td>
               <td>
                 <% if group.owener_id == current_user.id %>
                   <%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-outline-success" %>
