--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,4 +1,5 @@
-<div><%=link_to "グループを作成する",new_group_path %> | 
+<div>
+  <%=link_to "グループを作成する",new_group_path %> |
   <%=link_to "グループ一覧",groups_path %>
 </div>
 <table class='table'>
@@ -16,11 +17,14 @@
         <td><%= user.name %></td>
         <td>フォロー数: <%= user.followings.count %></td>
         <td>フォロワー数: <%= user.followers.count %></td>
-        <td><% if current_user.following?(user) %>
-            <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
-            <% else %>
-            <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
-            <% end %>
+        <td>
+          <% unless user.id == current_user.id %>
+            <% if current_user.following?(user) %>
+              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+              <% else %>
+              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+              <% end %>
+          <% end %>
         </td>
         <td><%= link_to 'Show', user %></td>
       </tr>
